[gd_scene load_steps=22 format=3 uid="uid://bymuvvhhf2ve4"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_yr2fy"]
[ext_resource type="Texture2D" uid="uid://x4xg4eq44yb" path="res://assets/sprites/switch_button_a.png" id="2_why2v"]
[ext_resource type="PackedScene" uid="uid://cob5gwbx56hw7" path="res://scenes/swipe_controller.tscn" id="3_adg6p"]
[ext_resource type="Shader" path="res://shaders/blurry.gdshader" id="4_8gxtm"]
[ext_resource type="Shader" path="res://shaders/highlightHard.gdshader" id="4_knm3k"]
[ext_resource type="Shader" path="res://shaders/scroll.gdshader" id="5_2q77x"]
[ext_resource type="Texture2D" uid="uid://bkx3sw1x0v1sd" path="res://assets/sprites/tile_0025.png" id="6_tldt6"]
[ext_resource type="Shader" path="res://shaders/highlight1.gdshader" id="7_pxujm"]
[ext_resource type="FontFile" uid="uid://yq5bsvv3n0sd" path="res://font_adventurer.tres" id="8_5q07m"]
[ext_resource type="FontFile" uid="uid://durllno7hjbwe" path="res://assets/fonts/Adventurer.ttf" id="9_dajsl"]
[ext_resource type="AudioStream" uid="uid://dqma1m5smg5hc" path="res://assets/sounds/blipSelect.wav" id="10_ojuwc"]
[ext_resource type="AudioStream" uid="uid://c8mu2cnqudd0u" path="res://assets/sounds/click.wav" id="12_kyksd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g23xm"]
shader = ExtResource("4_8gxtm")
shader_parameter/lod = 1.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7i3lf"]
shader = ExtResource("4_knm3k")
shader_parameter/highlight_color = Color(1, 1, 1, 1)
shader_parameter/frequency = 0.35
shader_parameter/highlight_speed = 6.0
shader_parameter/highlight_width = 15.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o020k"]
shader = ExtResource("5_2q77x")
shader_parameter/speed = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ifmsx"]
shader = ExtResource("7_pxujm")
shader_parameter/shine_color = Color(1, 1, 1, 0.25)
shader_parameter/line_width = 0.1
shader_parameter/angle = 0.785398
shader_parameter/speed = 1.0
shader_parameter/wait_cycles = 1.5
shader_parameter/height = 10.0
shader_parameter/frequency = 0.35
shader_parameter/speed_wavy = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ogjt3"]
shader = ExtResource("7_pxujm")
shader_parameter/shine_color = Color(1, 1, 1, 0.25)
shader_parameter/line_width = 0.1
shader_parameter/angle = 0.785398
shader_parameter/speed = 1.0
shader_parameter/wait_cycles = 1.5
shader_parameter/height = 10.0
shader_parameter/frequency = 0.35
shader_parameter/speed_wavy = 3.0

[sub_resource type="Animation" id="Animation_b3oau"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/Control/Label3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-480, -546)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer/VBoxContainer/Control/CenterContainer2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 18)]
}

[sub_resource type="Animation" id="Animation_rm7ot"]
resource_name = "pause_in"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23, 0.26, 0.3),
"transitions": PackedFloat32Array(1, 3.48219, 1, 14.9285),
"update": 0,
"values": [Vector2(0, -384), Vector2(0, 0), Vector2(0, -18.6596), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/Control/Label3:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.23, 0.26, 0.3),
"transitions": PackedFloat32Array(1, 3.48219, 1, 14.9285),
"update": 0,
"values": [Vector2(-480, -546), Vector2(-480, -114), Vector2(-480, -134.992), Vector2(-480, -114)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer/VBoxContainer/Control/CenterContainer2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.23, 0.26, 0.3),
"transitions": PackedFloat32Array(1, 1, 0.450625, 1),
"update": 0,
"values": [Vector2(0, 338), Vector2(0, 18), Vector2(0, 58), Vector2(0, 18)]
}

[sub_resource type="Animation" id="Animation_w8hey"]
resource_name = "pause_out"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.3),
"transitions": PackedFloat32Array(14.9285, 1, 3.48219, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -18.6596), Vector2(0, 0), Vector2(0, -384)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/Control/Label3:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.25),
"transitions": PackedFloat32Array(14.9285, 1, 3.48219, 1),
"update": 0,
"values": [Vector2(-480, -114), Vector2(-480, -134.992), Vector2(-480, -114), Vector2(-480, -546)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"unpause"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterContainer/VBoxContainer/Control/CenterContainer2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 18), Vector2(0, 58), Vector2(0, 18), Vector2(0, 322)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l0hcr"]
_data = {
"RESET": SubResource("Animation_b3oau"),
"pause_in": SubResource("Animation_rm7ot"),
"pause_out": SubResource("Animation_w8hey")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_yr2fy")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_g23xm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.196078, 0.482353, 1)

[node name="SwipeController" parent="." instance=ExtResource("3_adg6p")]

[node name="Jump button" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -176.0
offset_right = -157.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="Jump button"]
position = Vector2(-36, -36)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("2_why2v")
action = "jump"
visibility_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -384.0
offset_right = 2304.0
offset_bottom = 912.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pattern3" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
scale = Vector2(1.08076, 1.08076)
color = Color(0, 0, 0, 1)

[node name="Pattern2" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_7i3lf")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
scale = Vector2(1.06451, 1.06451)
color = Color(0.910468, 0.836782, 0, 1)

[node name="Pattern4" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
scale = Vector2(1.01423, 1.01423)
color = Color(0, 0, 0, 1)

[node name="Pattern" type="TextureRect" parent="Control"]
self_modulate = Color(0.580549, 0.00099621, 0.705967, 1)
material = SubResource("ShaderMaterial_o020k")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
texture = ExtResource("6_tldt6")
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
visible = false
material = SubResource("ShaderMaterial_ifmsx")
layout_mode = 2
theme_override_colors/font_color = Color(0.700026, 0.00347466, 0.98355, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.882402, 0.575904, 1.15514e-06, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("8_5q07m")
theme_override_font_sizes/font_size = 100
text = "Super Knight World"

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Label3" type="RichTextLabel" parent="CenterContainer/VBoxContainer/CenterContainer/Control"]
material = SubResource("ShaderMaterial_ogjt3")
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -546.0
offset_right = 480.0
offset_bottom = -400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.870449, 2.98411e-06, 0.538124, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.882402, 0.575904, 1.15514e-06, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("9_dajsl")
theme_override_fonts/bold_font = ExtResource("9_dajsl")
theme_override_fonts/italics_font = ExtResource("9_dajsl")
theme_override_fonts/bold_italics_font = ExtResource("9_dajsl")
theme_override_fonts/mono_font = ExtResource("9_dajsl")
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
bbcode_enabled = true
text = "[center][tornado radius=2 amp=2 freq=5
]PAUSE[/tornado][/center]"

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/Control"]
layout_mode = 2
offset_top = 18.0
offset_bottom = 18.0

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer/Control/CenterContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_right = 133.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="CenterContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_5q07m")
theme_override_font_sizes/font_size = 64
text = ">"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="LabelResume" type="RichTextLabel" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer/HBoxContainer/Control2"]
material = SubResource("ShaderMaterial_ogjt3")
clip_contents = false
layout_mode = 2
offset_left = -5.0
offset_right = 231.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.27877, 0.378969, 1, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("9_dajsl")
theme_override_fonts/bold_font = ExtResource("9_dajsl")
theme_override_fonts/italics_font = ExtResource("9_dajsl")
theme_override_fonts/bold_italics_font = ExtResource("9_dajsl")
theme_override_fonts/mono_font = ExtResource("9_dajsl")
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
bbcode_enabled = true
text = "RESUME"

[node name="CenterContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer3/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_5q07m")
theme_override_font_sizes/font_size = 64
text = ">"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer3/HBoxContainer"]
layout_mode = 2

[node name="LabelReload" type="RichTextLabel" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer3/HBoxContainer/Control2"]
material = SubResource("ShaderMaterial_ogjt3")
clip_contents = false
layout_mode = 2
offset_left = -5.0
offset_right = 255.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.27877, 0.378969, 1, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("9_dajsl")
theme_override_fonts/bold_font = ExtResource("9_dajsl")
theme_override_fonts/italics_font = ExtResource("9_dajsl")
theme_override_fonts/bold_italics_font = ExtResource("9_dajsl")
theme_override_fonts/mono_font = ExtResource("9_dajsl")
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
bbcode_enabled = true
text = "RESTART"

[node name="CenterContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_5q07m")
theme_override_font_sizes/font_size = 64
text = ">"

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2

[node name="LabelQuit" type="RichTextLabel" parent="CenterContainer/VBoxContainer/Control/CenterContainer2/Control/VBoxContainer/CenterContainer2/HBoxContainer/Control"]
material = SubResource("ShaderMaterial_ogjt3")
clip_contents = false
layout_mode = 2
offset_left = -5.0
offset_right = 135.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.27877, 0.378969, 1, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("9_dajsl")
theme_override_fonts/bold_font = ExtResource("9_dajsl")
theme_override_fonts/italics_font = ExtResource("9_dajsl")
theme_override_fonts/bold_italics_font = ExtResource("9_dajsl")
theme_override_fonts/mono_font = ExtResource("9_dajsl")
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
bbcode_enabled = true
text = "QUIT"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("10_ojuwc")
bus = &"SFX"

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("12_kyksd")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l0hcr")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
